// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layout Primitives Container limits width and centers 1`] = `
<View
  style={
    {
      "marginLeft": "auto",
      "marginRight": "auto",
      "maxWidth": 600,
      "width": "100%",
    }
  }
>
  <Text
    suppressHighlighting={true}
  >
    Content
  </Text>
</View>
`;

exports[`Layout Primitives Inline renders correctly with gap token 1`] = `
<View
  style={
    {
      "flexDirection": "row",
      "gap": 8,
    }
  }
>
  <Text
    suppressHighlighting={true}
  >
    1
  </Text>
  <Text
    suppressHighlighting={true}
  >
    2
  </Text>
</View>
`;

exports[`Layout Primitives Section renders title and subtitle 1`] = `
<View
  style={
    {
      "borderBottomColor": "#E8E4D9",
      "borderBottomWidth": 0,
      "borderStyle": "solid",
      "flexDirection": "column",
      "gap": 16,
      "paddingBottom": 18,
      "paddingTop": 18,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <View
      style={
        {
          "flex": 1,
          "flexDirection": "column",
          "gap": 4,
        }
      }
    >
      <Text
        accessibilityRole="header"
        allowFontScaling={true}
        maxFontSizeMultiplier={1.5}
        style={
          {
            "color": "#2C2A26",
            "fontFamily": "Inter_600SemiBold",
            "fontSize": 24,
            "letterSpacing": -0.2,
            "lineHeight": 32,
          }
        }
        suppressHighlighting={true}
      >
        [TR] test.title
      </Text>
      <Text
        allowFontScaling={true}
        maxFontSizeMultiplier={1.5}
        style={
          {
            "color": "#5E5B55",
            "fontFamily": "Inter_400Regular",
            "fontSize": 16,
            "letterSpacing": 0,
            "lineHeight": 24,
          }
        }
        suppressHighlighting={true}
      >
        [TR] test.subtitle
      </Text>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
        }
      }
    />
  </View>
  <View>
    <Text
      suppressHighlighting={true}
    >
      Content
    </Text>
  </View>
</View>
`;

exports[`Layout Primitives Stack renders correctly with gap token 1`] = `
<View
  style={
    {
      "flexDirection": "column",
      "gap": 16,
    }
  }
>
  <Text
    suppressHighlighting={true}
  >
    1
  </Text>
  <Text
    suppressHighlighting={true}
  >
    2
  </Text>
</View>
`;

exports[`Layout Primitives Surface renders danger variant 1`] = `
<View
  style={
    {
      "backgroundColor": "#EA4335",
      "borderBottomColor": "#EA4335",
      "borderBottomLeftRadius": 9,
      "borderBottomRightRadius": 9,
      "borderBottomWidth": 1,
      "borderLeftColor": "#EA4335",
      "borderLeftWidth": 1,
      "borderRightColor": "#EA4335",
      "borderRightWidth": 1,
      "borderStyle": "solid",
      "borderTopColor": "#EA4335",
      "borderTopLeftRadius": 9,
      "borderTopRightRadius": 9,
      "borderTopWidth": 1,
      "cursor": "default",
      "opacity": 1,
      "shadowColor": "rgb(44,42,38)",
      "shadowOffset": {
        "height": 4,
        "width": 0,
      },
      "shadowOpacity": 0,
      "shadowRadius": 10,
      "transform": [
        {
          "scale": 1,
        },
      ],
    }
  }
>
  <Text
    suppressHighlighting={true}
  >
    Content
  </Text>
</View>
`;

exports[`Layout Primitives Surface renders elevated variant 1`] = `
<View
  style={
    {
      "backgroundColor": "#FAF7F2",
      "borderBottomColor": "transparent",
      "borderBottomLeftRadius": 9,
      "borderBottomRightRadius": 9,
      "borderBottomWidth": 0,
      "borderLeftColor": "transparent",
      "borderLeftWidth": 0,
      "borderRightColor": "transparent",
      "borderRightWidth": 0,
      "borderStyle": "solid",
      "borderTopColor": "transparent",
      "borderTopLeftRadius": 9,
      "borderTopRightRadius": 9,
      "borderTopWidth": 0,
      "cursor": "default",
      "opacity": 1,
      "shadowColor": "rgb(44,42,38)",
      "shadowOffset": {
        "height": 4,
        "width": 0,
      },
      "shadowOpacity": 0.05,
      "shadowRadius": 10,
      "transform": [
        {
          "scale": 1,
        },
      ],
    }
  }
>
  <Text
    suppressHighlighting={true}
  >
    Content
  </Text>
</View>
`;

exports[`Layout Primitives Surface renders flat by default 1`] = `
<View
  style={
    {
      "backgroundColor": "#FFFFFF",
      "borderBottomColor": "transparent",
      "borderBottomLeftRadius": 9,
      "borderBottomRightRadius": 9,
      "borderBottomWidth": 0,
      "borderLeftColor": "transparent",
      "borderLeftWidth": 0,
      "borderRightColor": "transparent",
      "borderRightWidth": 0,
      "borderStyle": "solid",
      "borderTopColor": "transparent",
      "borderTopLeftRadius": 9,
      "borderTopRightRadius": 9,
      "borderTopWidth": 0,
      "cursor": "default",
      "opacity": 1,
      "shadowColor": "rgb(44,42,38)",
      "shadowOffset": {
        "height": 4,
        "width": 0,
      },
      "shadowOpacity": 0,
      "shadowRadius": 10,
      "transform": [
        {
          "scale": 1,
        },
      ],
    }
  }
>
  <Text
    suppressHighlighting={true}
  >
    Content
  </Text>
</View>
`;
